[project]
name = "echow"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncpg>=0.30.0",
    "fastapi>=0.115.6",
    "gunicorn>=23.0.0",
    "pydantic-settings>=2.7.0",
    "pydantic[email]>=2.10.3",
    "sqlalchemy>=2.0.36",
    "sqlmodel>=0.0.22",
    "uuid7>=0.1.0",
    "uvicorn>=0.34.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio==0.23.8",
    "pytest>=8.3.4",
    "pytest-timeout>=2.3.1",
]
lint = [
    "black>=24.10.0",
    "isort>=5.13.2",
    "ruff>=0.8.3",
]
